// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_mask 1`] = `
Object {
  "a": "1",
  "b": Object {
    "d": "1",
  },
}
`;

exports[`mask with mutation 1`] = `
Object {
  "a": "1",
  "b": Object {
    "d": "1",
    "e": Object {
      "f": 7,
    },
  },
}
`;

exports[`mergeDeep 1`] = `
Object {
  "b": Object {
    "c": "c1",
    "c2": "c2",
  },
  "d": "d2",
  "e": "e1",
}
`;

exports[`mergeDeep 2`] = `
Object {
  "b": Object {
    "c2": "c2",
  },
  "d": "d2",
}
`;
